# PathfindingAlgorithms

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: backend.hpp  buttonsBar.hpp  grid.hpp  legendBar.hpp  node.hpp  settingsBar.hpp  solution.hpp
src/: algorithms.cpp  backend.cpp  buttonsBar.cpp  grid.cpp  legendBar.cpp  node.cpp  settingsBar.cpp  solution.cpp
